--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </header>
     <nav>
         <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+        <a href="About.html">About</a>
         <a href="Stories.html">Stories</a>
         <a href="Contact.html">Contact</a>
         
